fix remove visibility for touch

--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ body { width:480px; margin:50px; padding:0; color:#fff; font:normal 1.5em/150% F
 #add-drink input { width:90%; padding:10px; font-size:24px; }
 #add-drink button { position:absolute; right:0; top:0; padding:10px; font-size:24px; }
 
-li span { cursor:pointer; display:none; }
-li:hover span { display:inline; }
+li span { cursor:pointer; opacity:.3; }
+li:hover span { opacity:1; }
